--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <body>
         <h1>Parker's R&eacute;sum&eacute;</h1>
         <p>Being a software developers involves desgining, coding, testing, and maintaing software. joining this course is to imporve my front-end skill so that</p>
-        <p>I am able to be a full-stack developer</p>
+        <p>I can be a full-stack developer</p>
         <h2>Education</h2>
         
         <h3>British Columbia Institute of Technology</h3>
         <p><strong>Bachelor of Technology - BTech, Computer Technology/Computer Systems Technology - Game Development Option</strong></p>
         <p>2021 - 2023</p>
         <ul>
-            <li>get a Bachelor in Game Development Option</li>
+            <li>Get a Bachelor in Game Development Option</li>
         </ul>
 
         <h3>British Columbia Institute of Technology</h3>
@@ -27,7 +27,7 @@
 
 
         <h2>Work Experience and Projects</h2>
-        
+
         <h3>Industry Sponsor Student Projects - COMP 4800</h3>
         <p>BCIT Computing, Sep 2020 - Dec 2020 (4 months)</p>
         <p>Vancouver, British Columbia, Canada</p>
