--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h2>Skills</h2>
         <ul>
             <li>HTML, CSS, JavaScript</li>
-            <li>Python, Java</li>
+            <li>Python, Java, c++</li>
             <li>Git version control</li>
             <li>Agile methodologies</li>
         </ul>
