fixed the problem according to feedback

--- a/Résumé.html
+++ b/Résumé.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Parker's R&eacute;sum&eacute;</title>
+        <title>Parker Chen – Resume”</title>
     </head>
     <body>
         <h1>Parker's R&eacute;sum&eacute;</h1>
-        <p>Being a software developers involves desgining, coding, testing, and maintaing software. joining this course is to imporve my front-end skill so that</p>
+        <p>Being a software developers involves designing, coding, testing, and maintaining software. joining this course is to improve my front-end skill so that</p>
         <p>I can be a full-stack developer</p>
         <h2>Education</h2>
         
