update resume, css, and index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; URL='Résumé.html'" />
-  <title>Redirecting...</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kosmo Technologies - Innovating for the Future</title>
+    <link rel="stylesheet" href="kosmo.css">
 </head>
-<body>
-  <p>If you are not redirected automatically, <a href="Résumé.html">click here</a>.</p>
+<body class="kosmo-page">
+    <header>
+        <h1>Kosmo Technologies</h1>
+        <p class="tagline">Pioneering the Future of Space Exploration</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#services">Our Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section id="about">
+            <h2>About Kosmo Technologies</h2>
+            <p>Kosmo Technologies is at the forefront of space exploration and innovation. Founded in 2025, we've quickly become a leader in developing cutting-edge technologies for interplanetary travel, space habitation, and resource utilization beyond Earth.</p>
+            <p>Our team of world-class scientists, engineers, and visionaries work tirelessly to push the boundaries of what's possible in space. From advanced propulsion systems to sustainable life support technologies, Kosmo Technologies is committed to making the cosmos accessible and habitable for humanity.</p>
+        </section>
+        <section id="services">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Advanced Propulsion Systems</li>
+                <li>Space Habitat Design and Construction</li>
+                <li>Extraterrestrial Resource Extraction</li>
+                <li>Zero-Gravity Manufacturing</li>
+                <li>Interplanetary Communication Networks</li>
+            </ul>
+            <p>At Kosmo Technologies, we believe that the future of humanity lies among the stars. Our groundbreaking research and development in space technologies are paving the way for sustainable off-world colonies, efficient space travel, and the utilization of resources found throughout our solar system.</p>
+            <p>We collaborate with space agencies, private enterprises, and academic institutions worldwide to accelerate the pace of space exploration and colonization. Our commitment to innovation, safety, and ethical space development sets us apart as we work towards a future where humanity is a multi-planetary species.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Ready to join us in shaping the future of space exploration? Get in touch with Kosmo Technologies today!</p>
+            <ul>
+                <li>Email: info@kosmotechnologies.com</li>
+                <li>Phone: +1 (123) 123-4567</li>
+                <li>Address: 123 Stargazer Boulevard, Lunar City, Moon Colony 54321</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Kosmo Technologies. All rights reserved. | <a href="resume.html">Go to My Résumé</a></p>
+    </footer>
 </body>
 </html>
