update resume list into blockquote

--- a/resume.html
+++ b/resume.html
@@ -19,18 +19,18 @@
             <h3>British Columbia Institute of Technology</h3>
             <p><strong>Bachelor of Technology - BTech, Computer Technology/Computer Systems Technology - Game Development Option</strong></p>
             <p>2021 - 2023</p>
-            <ul>
-                <li>Get a Bachelor in Game Development Option</li>
-            </ul>
+            <blockquote>
+                <p>Get a Bachelor in Game Development Option</p>
+            </blockquote>
 
             <h3>British Columbia Institute of Technology</h3>
             <p><strong>Diploma, Computer Technology/Computer Systems Technology - Technical Programming Option</strong></p>
             <p>2018 - 2020</p>
-            <ul>
-                <li>Worked in teams to create various projects using different programming languages such as HTML, CSS, and Javascript</li>
-                <li>Learned OOP languages, with a focus on Python and Design patterns</li>
-                <li>Gained experience with Microsoft products such as C# & .NET framework</li>
-            </ul>
+            <blockquote>
+                <p>Worked in teams to create various projects using different programming languages such as HTML, CSS, and Javascript</p>
+                <p>Learned OOP languages, with a focus on Python and Design patterns</p>
+                <p>Gained experience with Microsoft products such as C# & .NET framework</p>
+            </blockquote>
         </section>
 
         <section>
@@ -39,44 +39,44 @@
             <h3>Industry Sponsor Student Projects - COMP 4800</h3>
             <p>BCIT Computing, Sep 2020 - Dec 2020 (4 months)</p>
             <p>Vancouver, British Columbia, Canada</p>
-            <ul>
-                <li>Developed an open-source successor to HP Reveal with 4 teammates</li>
-                <li>Created an application with Web Component and Android Component</li>
-                <li>Utilized Java and Heroku</li>
-            </ul>
+            <blockquote>
+                <p>Developed an open-source successor to HP Reveal with 4 teammates</p>
+                <p>Created an application with Web Component and Android Component</p>
+                <p>Utilized Java and Heroku</p>
+            </blockquote>
 
             <h3>Industry Sponsor Student Projects - COMP 3800</h3>
             <p>Grateful Estate Inc, Apr 2020 - May 2020 (2 months)</p>
             <p>Vancouver, British Columbia, Canada</p>
-            <ul>
-                <li>Developed an Android application for Grateful Estate Inc. with four teammates</li>
-                <li>Responsible for discussion with teammates and client for application design and programming language selection</li>
-                <li>Created a login function for user email authentication</li>
-                <li>Managed session functionality</li>
-                <li>Handled documentation on GitHub</li>
-                <li>Used Java and Android Studio</li>
-            </ul>
+            <blockquote>
+                <p>Developed an Android application for Grateful Estate Inc. with four teammates</p>
+                <p>Responsible for discussion with teammates and client for application design and programming language selection</p>
+                <p>Created a login function for user email authentication</p>
+                <p>Managed session functionality</p>
+                <p>Handled documentation on GitHub</p>
+                <p>Used Java and Android Studio</p>
+            </blockquote>
 
             <h3>Project Course - COMP 2930</h3>
             <p>BCIT Computing, Apr 2019 - May 2019 (2 months)</p>
             <p>Vancouver, Canada Area</p>
-            <ul>
-                <li>Worked in a team of five to complete an internal web game application</li>
-                <li>Acquired teamwork development and project management skills</li>
-                <li>Learned about the development lifecycle</li>
-                <li>Understood different team dynamics and practiced working together in a group</li>
-                <li>Applied previously-developed technical programming knowledge</li>
-            </ul>
+            <blockquote>
+                <p>Worked in a team of five to complete an internal web game application</p>
+                <p>Acquired teamwork development and project management skills</p>
+                <p>Learned about the development lifecycle</p>
+                <p>Understood different team dynamics and practiced working together in a group</p>
+                <p>Applied previously-developed technical programming knowledge</p>
+            </blockquote>
         </section>
 
         <section>
             <h2>Skills</h2>
-            <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>Python, Java, C++</li>
-                <li>Git version control</li>
-                <li>Agile methodologies</li>
-            </ul>
+            <blockquote>
+                <p>HTML, CSS, JavaScript</p>
+                <p>Python, Java, C++</p>
+                <p>Git version control</p>
+                <p>Agile methodologies</p>
+            </blockquote>
         </section>
     </main>
     <footer>
