--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="kosmo-page">
     <header>
         <h1>Kosmo Technologies</h1>
-        <p class="tagline">Pioneering the Future of Space Exploration</p>
+        <p class="tagline">Building Tomorrow’s Solutions Today</p>
     </header>
     <nav>
         <ul>
