--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="kosmo.css">
 </head>
 <body class="kosmo-page">
-    <header>
+    <div>
         <h1>Kosmo Technologies</h1>
         <p class="tagline">Building Tomorrow’s Solutions Today</p>
-    </header>
-    <nav>
+    </div>
+    <div>
         <ul>
             <li><a href="#about">About Us</a></li>
             <li><a href="#services">Our Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>
+    </div>
     <main>
         <section id="about">
             <h2>About Kosmo Technologies</h2>
