--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="kosmo.css">
 </head>
 <body class="resume-page">
-    <header>
+    <div>
         <h1>Parker's R&eacute;sum&eacute;</h1>
-    </header>
+    </div>
     <main>
         <section>
             <p>Being a software developer involves designing, coding, testing, and maintaining software. Joining this course is to improve my front-end skills so that I can be a full-stack developer.</p>
