--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
-    <main>
-        <section id="about">
+    
+        <div id="about">
             <h2>About Kosmo Technologies</h2>
             <p>Kosmo Technologies is at the forefront of space exploration and innovation. Founded in 2025, we've quickly become a leader in developing cutting-edge technologies for interplanetary travel, space habitation, and resource utilization beyond Earth.</p>
             <p>Our team of world-class scientists, engineers, and visionaries work tirelessly to push the boundaries of what's possible in space. From advanced propulsion systems to sustainable life support technologies, Kosmo Technologies is committed to making the cosmos accessible and habitable for humanity.</p>
-        </section>
-        <section id="services">
+        </div>
+        <div id="services">
             <h2>Our Services</h2>
             <ul>
                 <li>Advanced Propulsion Systems</li>
@@ -35,8 +35,8 @@
             </ul>
             <p>At Kosmo Technologies, we believe that the future of humanity lies among the stars. Our groundbreaking research and development in space technologies are paving the way for sustainable off-world colonies, efficient space travel, and the utilization of resources found throughout our solar system.</p>
             <p>We collaborate with space agencies, private enterprises, and academic institutions worldwide to accelerate the pace of space exploration and colonization. Our commitment to innovation, safety, and ethical space development sets us apart as we work towards a future where humanity is a multi-planetary species.</p>
-        </section>
-        <section id="contact">
+        </div>
+        <div id="contact">
             <h2>Contact Us</h2>
             <p>Ready to join us in shaping the future of space exploration? Get in touch with Kosmo Technologies today!</p>
             <ul>
@@ -44,8 +44,8 @@
                 <li>Phone: +1 (123) 123-4567</li>
                 <li>Address: 123 Stargazer Boulevard, Lunar City, Moon Colony 54321</li>
             </ul>
-        </section>
-    </main>
+        </sdiv>
+    
     <footer>
         <p>&copy; 2024 Kosmo Technologies. All rights reserved. | <a href="resume.html">Go to My Résumé</a></p>
     </footer>
