--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li>Phone: +1 (123) 123-4567</li>
                 <li>Address: 123 Stargazer Boulevard, Lunar City, Moon Colony 54321</li>
             </ul>
-        </sdiv>
+        </div>
     
     <footer>
         <p>&copy; 2024 Kosmo Technologies. All rights reserved. | <a href="resume.html">Go to My Résumé</a></p>
