--- a/resume.html
+++ b/resume.html
@@ -11,10 +11,10 @@
         <h1>Parker's R&eacute;sum&eacute;</h1>
     </div>
     <main>
-        <section>
+        <div>
             <p>Being a software developer involves designing, coding, testing, and maintaining software. Joining this course is to improve my front-end skills so that I can be a full-stack developer.</p>
-        </section>
-        <section>
+        </div>
+        <div>
             <h2>Education</h2>
             <h3>British Columbia Institute of Technology</h3>
             <p><strong>Bachelor of Technology - BTech, Computer Technology/Computer Systems Technology - Game Development Option</strong></p>
@@ -31,9 +31,9 @@
                 <p>Learned OOP languages, with a focus on Python and Design patterns</p>
                 <p>Gained experience with Microsoft products such as C# & .NET framework</p>
             </blockquote>
-        </section>
+        </div>
 
-        <section>
+        <div>
             <h2>Work Experience and Projects</h2>
 
             <h3>Industry Sponsor Student Projects - COMP 4800</h3>
@@ -67,9 +67,9 @@
                 <p>Understood different team dynamics and practiced working together in a group</p>
                 <p>Applied previously-developed technical programming knowledge</p>
             </blockquote>
-        </section>
+        </div>
 
-        <section>
+        <div>
             <h2>Skills</h2>
             <blockquote>
                 <p>HTML, CSS, JavaScript</p>
@@ -77,7 +77,7 @@
                 <p>Git version control</p>
                 <p>Agile methodologies</p>
             </blockquote>
-        </section>
+        </div>
     </main>
     <footer>
         <p><a href="index.html">Go to Kosmo Technologies</a></p>
