--- a/kosmo.html
+++ b/kosmo.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="kosmo.css">
 </head>
 <body class="kosmo-page">
+    <nav>
+        <ul class="navbar">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="kosmo.html">Kosmo Technologies</a></li>
+            <li><a href="resume.html">My Résumé</a></li>
+        </ul>
+    </nav>
     <div>
         <h1>Kosmo Technologies</h1>
         <p class="tagline">Building Tomorrow’s Solutions Today</p>
