--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="kosmo.css">
 </head>
 <body class="resume-page">
+    <nav>
+        <ul class="navbar">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="kosmo.html">Kosmo Technologies</a></li>
+            <li><a href="resume.html">My Résumé</a></li>
+        </ul>
+    </nav>
     <div>
         <h1>Parker's R&eacute;sum&eacute;</h1>
     </div>
