added role for navigation

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <p>Explore my résumé to see my education and experience, or learn more about Kosmo Technologies, where innovation meets space exploration.</p>
     </div>
     
-    <nav>
+    <nav role="navigation" aria-label="Main Navigation">
         <ul class="navbar">
             <li><a href="home.html">Home</a></li>
             <li><a href="kosmo.html">Kosmo Technologies</a></li>
