--- a/kosmo.html
+++ b/kosmo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="kosmo.css">
 </head>
 <body class="kosmo-page">
-    <nav>
+    <nav role="navigation" aria-label="Main Navigation">
         <ul class="navbar">
             <li><a href="home.html">Home</a></li>
             <li><a href="kosmo.html">Kosmo Technologies</a></li>
