--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@
         </blockquote>
     </div>
     <footer>
-        <p><a href="index.html">Go to Kosmo Technologies</a></p>
+        <p><a href="kosmo.html">Go to Kosmo Technologies</a></p>
     </footer>
 </body>
 </html>
