make some adjustment for the page

--- a/kosmo.html
+++ b/kosmo.html
@@ -27,7 +27,7 @@
     </div>
     <div id="about">
         <h2>About Kosmo Technologies</h2>
-        <p>Kosmo Technologies is at the forefront of space exploration and innovation. Founded in 2025, we've quickly become a leader in developing cutting-edge technologies for interplanetary travel, space habitation, and resource utilization beyond Earth.</p>
+        <p>Kosmo Technologies is at the forefront of space exploration and innovation. Founded in 2025, we've quickly become a leader in developing cutting-edge technologies for interplanetary travel, space habitation, and resource utilization beyond Earth. For more information, visit <a href="https://www.nasa.gov" target="_blank">NASA's official website</a>.</p>
         <p>Our team of world-class scientists, engineers, and visionaries work tirelessly to push the boundaries of what's possible in space. From advanced propulsion systems to sustainable life support technologies, Kosmo Technologies is committed to making the cosmos accessible and habitable for humanity.</p>
     </div>
     <div id="services">
@@ -46,7 +46,7 @@
         <h2>Contact Us</h2>
         <p>Ready to join us in shaping the future of space exploration? Get in touch with Kosmo Technologies today!</p>
         <ul>
-            <li>Email: info@kosmotechnologies.com</li>
+            <li>Email: <a href="mailto:info@kosmotechnologies.com">info@kosmotechnologies.com</a></li>
             <li>Phone: +1 (123) 123-4567</li>
             <li>Address: 123 Stargazer Boulevard, Lunar City, Moon Colony 54321</li>
         </ul>
