--- a/resume.html
+++ b/resume.html
@@ -16,11 +16,10 @@
     </nav>
     <div>
         <h1>Parker's R&eacute;sum&eacute;</h1>
-    </div>
-    <div>
         <p>Being a software developer involves designing, coding, testing, and maintaining software. Joining this course is to improve my front-end skills so that I can be a full-stack developer.</p>
+        <p>Jump to: <a href="#education">Education</a> | <a href="#experience">Work Experience</a> | <a href="#skills">Skills</a></p>
     </div>
-    <div>
+    <div id="education">
         <h2>Education</h2>
         <h3>British Columbia Institute of Technology</h3>
         <p><strong>Bachelor of Technology - BTech, Computer Technology/Computer Systems Technology - Game Development Option</strong></p>
@@ -39,7 +38,7 @@
         </blockquote>
     </div>
 
-    <div>
+    <div id="experience">
         <h2>Work Experience and Projects</h2>
 
         <h3>Industry Sponsor Student Projects - COMP 4800</h3>
@@ -75,7 +74,7 @@
         </blockquote>
     </div>
 
-    <div>
+    <div id="skills">
         <h2>Skills</h2>
         <blockquote>
             <p>HTML, CSS, JavaScript</p>
