changed the name of creme_brulee

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="Images/Crème_Brûlée.jpg" alt="Crème Brûlée" class="dessert-image">
+                <img src="Images/Creme_Brulee.jpg" alt="Crème Brûlée" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Crème Brûlée</h2>
                     <p class="dessert-description">Silky custard with a crisp caramelized sugar topping</p>
