changed nav bar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#news">News</a></li>
-            <li><a href="#cakes">Cakes</a></li>
-            <li><a href="#categories">Categories</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#Home">News</a></li>
+            <li><a href="#About">Cakes</a></li>
+            <li><a href="#Categories">Categories</a></li>
+            <li><a href="#Contact">About</a></li>
+            <li><a href="#FAQ">FAQ</a></li>
         </ul>
     </nav>
     <header>
