--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#Home">News</a></li>
-            <li><a href="#About">Cakes</a></li>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#About">About</a></li>
             <li><a href="#Categories">Categories</a></li>
-            <li><a href="#Contact">About</a></li>
+            <li><a href="#Contact">Contact</a></li>
             <li><a href="#FAQ">FAQ</a></li>
         </ul>
     </nav>
