--- a/index.html
+++ b/index.html
@@ -23,42 +23,42 @@
     <main>
         <div class="dessert-grid">
             <div class="dessert-card">
-                <img src="Images/chocolate_lava_cake.jpg" alt="Chocolate Lava Cake" class="dessert-image">
+                <img src="images/chocolate_lava_cake.jpg" alt="Chocolate Lava Cake" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Chocolate Lava Cake</h2>
                     <p class="dessert-description">Decadent chocolate cake with a gooey molten center</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="Images/strawberry_cheescake.jpg" alt="Strawberry Cheesecake" class="dessert-image">
+                <img src="images/strawberry_cheescake.jpg" alt="Strawberry Cheesecake" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Strawberry Cheesecake</h2>
                     <p class="dessert-description">Creamy cheesecake topped with fresh strawberries</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="Images/Tiramisu.jpg" alt="Tiramisu" class="dessert-image">
+                <img src="images/Tiramisu.jpg" alt="Tiramisu" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Tiramisu</h2>
                     <p class="dessert-description">Classic Italian dessert with layers of coffee-soaked ladyfingers</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="Images/Apple_Pie.jpg" alt="Apple Pie" class="dessert-image">
+                <img src="images/Apple_Pie.jpg" alt="Apple Pie" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Apple Pie</h2>
                     <p class="dessert-description">Traditional American pie with a flaky crust and spiced apple filling</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="Images/Creme_Brulee.jpg" alt="Crème Brûlée" class="dessert-image">
+                <img src="images/Creme_Brulee.jpg" alt="Crème Brûlée" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Crème Brûlée</h2>
                     <p class="dessert-description">Silky custard with a crisp caramelized sugar topping</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="Images/Macarons.jpg" alt="Macarons" class="dessert-image">
+                <img src="images/Macarons.jpg" alt="Macarons" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Macarons</h2>
                     <p class="dessert-description">Delicate French almond meringue cookies with various fillings</p>
