--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     <header>
-        <h1>ant_studio</h1>
+        <h1>_ant.Studio</h1>
         <p class="header-description">Discover our artisanal desserts, where every creation is a masterpiece of flavor and craftsmanship.</p>
     </header>
     <main>
@@ -66,5 +66,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>&copy; 2024 ant_studio. Parker Chen Desgin. All rights reserved.</p>
+    </footer>
 </body>
 </html>
