both files are updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 ant_studio. Parker Chen Desgin. All rights reserved.</p>
+        <p>&copy; 2024 _ant.Studio. Parker Chen Desgin. All rights reserved.</p>
     </footer>
 </body>
 </html>
