--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ant_studio - Artisanal Desserts</title>
     <link rel="stylesheet" href="styles.css"> <!-- Added link to the new CSS file -->
 </head>
+
 <body>
     <nav>
         <ul>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#Categories">Categories</a></li>
-            <li><a href="#Contact">Contact</a></li>
-            <li><a href="#FAQ">FAQ</a></li>
+            <li><a href="#" class="current">Home</a></li>
+            <li><a href="#" class="current">About</a></li>
+            <li><a href="#" class="current">Categories</a></li>
+            <li><a href="#" class="current">Contact</a></li>
+            <li><a href="#" class="current">FAQ</a></li>
         </ul>
     </nav>
     <header>
         <h1>_ant.Studio</h1>
-        <p class="header-description">Discover our artisanal desserts, where every creation is a masterpiece of flavor and craftsmanship.</p>
+        <p class="header-description">Discover our artisanal desserts, where every creation is a masterpiece of flavor
+            and craftsmanship.</p>
     </header>
     <main>
         <div class="dessert-grid">
@@ -47,7 +50,8 @@
                 <img src="images/Apple_Pie.jpg" alt="Apple Pie" class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Apple Pie</h2>
-                    <p class="dessert-description">Traditional American pie with a flaky crust and spiced apple filling</p>
+                    <p class="dessert-description">Traditional American pie with a flaky crust and spiced apple filling
+                    </p>
                 </div>
             </div>
             <div class="dessert-card">
@@ -70,4 +74,5 @@
         <p>&copy; 2024 _ant.Studio. Parker Chen Desgin. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
