--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     </nav>
     <header>
         <h1>_ant.Studio</h1>
-        <p class="header-description">Discover our artisanal desserts, where every creation is a masterpiece of flavor
+        <p class="header-description">Antman Studio embraces the brand's essence of freely sharing desserts, 
+            cuisine, aesthetics, and culture, distilling beauty to enrich daily life. The concept store serves as 
+            a more complete starting point, allowing more possibilities to unfold in this space.
+            Discover our artisanal desserts, where every creation is a masterpiece of flavor
             and craftsmanship.</p>
     </header>
     <main>
