--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ant_studio - Artisanal Desserts</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Added link to the new CSS file -->
+    <link rel="stylesheet" href="ant_studio_styles.css"> <!-- Added link to the new CSS file -->
 </head>
 
 <body>
     <nav>
         <ul>
             <li><a href="#" class="current">Home</a></li>
-            <li><a href="#" class="current">About</a></li>
-            <li><a href="#" class="current">Categories</a></li>
-            <li><a href="#" class="current">Contact</a></li>
-            <li><a href="#" class="current">FAQ</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">FAQ</a></li>
         </ul>
     </nav>
     <header>
@@ -29,28 +29,28 @@
     <main>
         <div class="dessert-grid">
             <div class="dessert-card">
-                <img src="images/chocolate_lava_cake.jpg" alt="Chocolate Lava Cake" class="dessert-image">
+                <img src="images/chocolate_lava_cake.jpg" alt="Chocolate Lava Cake" width="300" height="300">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Chocolate Lava Cake</h2>
                     <p class="dessert-description">Decadent chocolate cake with a gooey molten center</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="images/strawberry_cheescake.jpg" alt="Strawberry Cheesecake" class="dessert-image">
+                <img src="images/strawberry_cheescake.jpg" alt="Strawberry Cheesecake" width="300" height="300">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Strawberry Cheesecake</h2>
                     <p class="dessert-description">Creamy cheesecake topped with fresh strawberries</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="images/Tiramisu.jpg" alt="Tiramisu" class="dessert-image">
+                <img src="images/Tiramisu.jpg" alt="Tiramisu" width="300" height="300">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Tiramisu</h2>
                     <p class="dessert-description">Classic Italian dessert with layers of coffee-soaked ladyfingers</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="images/Apple_Pie.jpg" alt="Apple Pie" class="dessert-image">
+                <img src="images/Apple_Pie.jpg" alt="Apple Pie" width="300" height="300">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Apple Pie</h2>
                     <p class="dessert-description">Traditional American pie with a flaky crust and spiced apple filling
@@ -58,14 +58,14 @@
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="images/Creme_Brulee.jpg" alt="Crème Brûlée" class="dessert-image">
+                <img src="images/Creme_Brulee.jpg" alt="Crème Brûlée" width="300" height="300">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Crème Brûlée</h2>
                     <p class="dessert-description">Silky custard with a crisp caramelized sugar topping</p>
                 </div>
             </div>
             <div class="dessert-card">
-                <img src="images/Macarons.jpg" alt="Macarons" class="dessert-image">
+                <img src="images/Macarons.jpg" alt="Macarons" width="300" height="300">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Macarons</h2>
                     <p class="dessert-description">Delicate French almond meringue cookies with various fillings</p>
